Key Shortcuts (#39)
- Support Key Shortcuts
- Store wide screen tool window layout setting
- Various Bugfixes
- Updated tools and dependencies (gradle, plugins, ...)